Added isSupported() methods to Packer and Compiler.